fixed content scrolling bugs and scrollbar styling

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     --background-blue: rgb(9, 10, 48);
     --font-light-grey: rgb(189, 189, 189);
     --log-page-bg: rgb(116, 116, 116);
+    --scrollbar: rgb(41, 42, 75);
 }
 
 *, *::after, *::before {
@@ -28,10 +29,29 @@ main {
     margin-bottom: 5rem;
 }
 
+.album-pages-container {
+    background-color: rgb(63, 63, 63);
+    padding: 2rem;
+}
+
 .log-page-wrapper {
     background-color: var(--log-page-bg);
-    height: 80vh;
-    overflow-y: scroll;
+    height:80vh;
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.log-page-wrapper::before {
+    content: '';
+    box-shadow: inset 0 0 10px rgb(70, 70, 70);
+    border-radius: 20px;
+    pointer-events: none;
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
 }
 
 .log-page {
@@ -41,6 +61,19 @@ main {
     flex-wrap: wrap;
     gap:0.5rem;
     padding:1rem;
+    height: 100%;
+    overflow-y: auto;
+
+}
+
+.log-page::-webkit-scrollbar {
+    background-color: var(--log-page-bg);
+    width: 0.5rem;
+}
+
+.log-page::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar);
+    border-radius: 20px;
     
 }
 
